# discretedistributions

./: README.md  discretedistributions.cabal  stack.yaml
src/Numeric/Probability/: Discrete.hs
src/Numeric/Probability/Discrete/: QualifiedDo.hs
