name:                discretedistributions
version:             0.1.0.0
synopsis:            Simple discrete probability distributions
-- description:
homepage:            https://github.com/quickdudley/discretedistributions#readme
license:             BSD3
license-file:        LICENSE
author:              Jeremy List
maintainer:          quick.dudley@gmail.com
copyright:           BSD3
category:            Math, Monads
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.Probability.Discrete
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite discretedistributions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , discretedistributions
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/quickdudley/discretedistributions
